crates/sith_python_parser/tests/snapshots/invalid_syntax@raise_stmt_invalid_cause.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/raise_stmt_invalid_cause.py
---
## AST

```
Module(
    ModModule {
        range: 0..57,
        body: [
            Raise(
                RaiseStmt {
                    range: 0..15,
                    exc: Some(
                        Name(
                            NameExpr {
                                range: 6..7,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Starred(
                            StarredExpr {
                                range: 13..15,
                                value: Name(
                                    NameExpr {
                                        range: 14..15,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
            Raise(
                RaiseStmt {
                    range: 16..36,
                    exc: Some(
                        Name(
                            NameExpr {
                                range: 22..23,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Yield(
                            YieldExpr {
                                range: 29..36,
                                value: Some(
                                    Name(
                                        NameExpr {
                                            range: 35..36,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
            Raise(
                RaiseStmt {
                    range: 37..51,
                    exc: Some(
                        Name(
                            NameExpr {
                                range: 43..44,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Name(
                            NameExpr {
                                range: 50..51,
                                id: Name("y"),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 55..56,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 55..56,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | raise x from *y
  |              ^^ Syntax Error: Starred expression cannot be used here
2 | raise x from yield y
3 | raise x from y := 1
  |


  |
1 | raise x from *y
2 | raise x from yield y
  |              ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | raise x from y := 1
  |


  |
1 | raise x from *y
2 | raise x from yield y
3 | raise x from y := 1
  |                ^^ Syntax Error: Expected a statement
  |
