crates/sith_python_parser/tests/snapshots/invalid_syntax@raise_stmt_unparenthesized_tuple_exc.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/raise_stmt_unparenthesized_tuple_exc.py
---
## AST

```
Module(
    ModModule {
        range: 0..38,
        body: [
            Raise(
                RaiseStmt {
                    range: 0..8,
                    exc: Some(
                        Tuple(
                            TupleExpr {
                                range: 6..8,
                                elts: [
                                    Name(
                                        NameExpr {
                                            range: 6..7,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    cause: None,
                },
            ),
            Raise(
                RaiseStmt {
                    range: 9..19,
                    exc: Some(
                        Tuple(
                            TupleExpr {
                                range: 15..19,
                                elts: [
                                    Name(
                                        NameExpr {
                                            range: 15..16,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        NameExpr {
                                            range: 18..19,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    cause: None,
                },
            ),
            Raise(
                RaiseStmt {
                    range: 20..37,
                    exc: Some(
                        Tuple(
                            TupleExpr {
                                range: 26..30,
                                elts: [
                                    Name(
                                        NameExpr {
                                            range: 26..27,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        NameExpr {
                                            range: 29..30,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    cause: Some(
                        Name(
                            NameExpr {
                                range: 36..37,
                                id: Name("z"),
                                ctx: Load,
                            },
                        ),
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | raise x,
  |       ^^ Syntax Error: Unparenthesized tuple expression cannot be used here
2 | raise x, y
3 | raise x, y from z
  |


  |
1 | raise x,
2 | raise x, y
  |       ^^^^ Syntax Error: Unparenthesized tuple expression cannot be used here
3 | raise x, y from z
  |


  |
1 | raise x,
2 | raise x, y
3 | raise x, y from z
  |       ^^^^ Syntax Error: Unparenthesized tuple expression cannot be used here
  |
